gl31-master/src/test/deca/context/invalid/sansobjet/directaffect_float2.deca
// Description:
//    Typage : associe "float" à un float
//
// Resultats:
//    Ligne 10: Affectation de type impossible, 'float' ne peut pas valoir "float"
//
// Historique:
//    cree le 17/01/2021
{
   float f = "float";
}
